Complete professional redesign: removed emojis, clean fonts (Inter + JetBrains Mono), minimal design, professional styling

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$TARD - The Token Your Mom Warned You About</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="stars"></div>
     
     <header>
         <div class="container">
-            <h1 class="logo">💩 $TARD 💩</h1>
+            <h1 class="logo">$TARD</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#tokenomics">Tokenomics</a>
@@ -30,14 +30,14 @@
                         <span class="glitch" data-text="$SNEKTARD">$SNEKTARD</span>
                     </h1>
                     <p class="hero-subtitle">The token your mom warned you about!</p>
-                    <p class="hero-description">It's $SNEK $TARD token. The most retarded snake on Cardano! 🐍</p>
+                    <p class="hero-description">It's $SNEK $TARD token. The most retarded snake on Cardano!</p>
                     <div class="hero-buttons">
                         <a href="https://www.snek.fun/token/2ca973c0c6691d30c021c95c5076dd7d1b5a0d5fccc28925d6f09157536e656b54415244?1755022047664" 
                            class="cta-button" target="_blank">
-                            🚀 BUY $TARD NOW 🚀
+                            BUY $TARD NOW
                         </a>
                         <button class="meme-button" onclick="playMemeSound()">
-                            🔊 PLAY MEME SOUND
+                            PLAY SOUND
                         </button>
                     </div>
                 </div>
@@ -61,15 +61,15 @@
                 <h2>About $TARD</h2>
                 <div class="about-grid">
                     <div class="about-card">
-                        <h3>🧠 What is $TARD?</h3>
+                        <h3>What is $TARD?</h3>
                         <p>The most intellectually challenged snake token on Cardano. We're so dumb, we're smart!</p>
                     </div>
                     <div class="about-card">
-                        <h3>🎯 Mission</h3>
+                        <h3>Mission</h3>
                         <p>To be the dumbest token that somehow makes you rich. No promises though!</p>
                     </div>
                     <div class="about-card">
-                        <h3>👨‍👩‍👧‍👦 Community</h3>
+                        <h3>Community</h3>
                         <p>Join thousands of fellow TARDs who can't read whitepapers!</p>
                     </div>
                 </div>
@@ -140,17 +140,17 @@
                 <h2>Why Choose $TARD?</h2>
                 <div class="features-grid">
                     <div class="feature-card">
-                        <div class="feature-icon">💎</div>
+                        <div class="feature-icon">01</div>
                         <h3>Makes Your Wallet Sexy</h3>
                         <p>Your wallet will look so good, even your wife's boyfriend will be jealous!</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">📄</div>
+                        <div class="feature-icon">02</div>
                         <h3>Comic Sans Whitepaper</h3>
                         <p>The most professional unprofessional document you'll ever not read!</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">🎪</div>
+                        <div class="feature-icon">03</div>
                         <h3>Pure Entertainment</h3>
                         <p>Better than Netflix! (Results may vary, side effects include poverty)</p>
                     </div>
@@ -164,7 +164,7 @@
                 <p>Join the dumbest community on Cardano!</p>
                 <a href="https://www.snek.fun/token/2ca973c0c6691d30c021c95c5076dd7d1b5a0d5fccc28925d6f09157536e656b54415244?1755022047664" 
                    class="mega-buy-button" target="_blank">
-                    🐍 BUY $TARD ON SNEK.FUN 🐍
+                    BUY $TARD ON SNEK.FUN
                 </a>
                 <div class="warning">
                     <p>⚠️ Warning: This token may cause severe FOMO, diamond hands, and an irresistible urge to HODL!</p>
