--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-title">
-                        <span class="glitch" data-text="$SNEKTARD">$SNEKTARD</span>
+                        <span class="glitch" data-text="$TARD">$TARD</span>
                     </h1>
                     <p class="hero-subtitle">The token your mom warned you about!</p>
                     <p class="hero-description">It's $SNEK $TARD token. The most retarded snake on Cardano!</p>
