Add TARD Catcher mini-game: complete game with falling TARDs, bombs, scoring, levels, high scores, and professional design

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="#about">About</a>
                 <a href="#tokenomics">Tokenomics</a>
                 <a href="#roadmap">Roadmap</a>
+                <a href="game.html">GAME</a>
                 <a href="#buy" class="buy-btn">BUY NOW!</a>
             </nav>
         </div>
