Add TARD image as favicon for both main site and game page

--- a/game.html
+++ b/game.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TARD Game - Catch the Falling TARDs!</title>
+    <link rel="icon" type="image/jpeg" href="df546240bff3eda3c98afc44c6d075ee.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="df546240bff3eda3c98afc44c6d075ee.jpg">
+    <link rel="apple-touch-icon" href="df546240bff3eda3c98afc44c6d075ee.jpg">
     <link rel="stylesheet" href="game.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
